Bib refs added.

--- a/paper_latex/bibliography.bib
+++ b/paper_latex/bibliography.bib
@@ -1,15 +1,40 @@
-@article{DBLP:journals/heuristics/ChuB98,
-  author    = {P. C. Chu and
-               J. E. Beasley},
-  title     = {A Genetic Algorithm for the Multidimensional Knapsack Problem},
-  journal   = {J. Heuristics},
-  volume    = {4},
-  number    = {1},
-  pages     = {63--86},
-  year      = {1998},
-  url       = {https://doi.org/10.1023/A:1009642405419},
-  doi       = {10.1023/A:1009642405419},
-  timestamp = {Wed, 14 Jun 2017 20:33:24 +0200},
-  biburl    = {https://dblp.org/rec/bib/journals/heuristics/ChuB98},
+@proceedings{DBLP:conf/eurogp/2007,
+  editor    = {Marc Ebner and
+               Michael O'Neill and
+               Anik{\'{o}} Ek{\'{a}}rt and
+               Leonardo Vanneschi and
+               Anna Esparcia{-}Alc{\'{a}}zar},
+  title     = {Genetic Programming, 10th European Conference, EuroGP 2007, Valencia,
+               Spain, April 11-13, 2007, Proceedings},
+  series    = {Lecture Notes in Computer Science},
+  volume    = {4445},
+  publisher = {Springer},
+  year      = {2007},
+  url       = {https://doi.org/10.1007/978-3-540-71605-1},
+  doi       = {10.1007/978-3-540-71605-1},
+  isbn      = {978-3-540-71602-0},
+  biburl    = {https://dblp.org/rec/bib/conf/eurogp/2007},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+@proceedings{DBLP:conf/ppsn/2012-1,
+  editor    = {Carlos A. Coello Coello and
+               Vincenzo Cutello and
+               Kalyanmoy Deb and
+               Stephanie Forrest and
+               Giuseppe Nicosia and
+               Mario Pavone},
+  title     = {Parallel Problem Solving from Nature - {PPSN} {XII} - 12th International
+               Conference, Taormina, Italy, September 1-5, 2012, Proceedings, Part
+               {I}},
+  series    = {Lecture Notes in Computer Science},
+  volume    = {7491},
+  publisher = {Springer},
+  year      = {2012},
+  url       = {https://doi.org/10.1007/978-3-642-32937-1},
+  doi       = {10.1007/978-3-642-32937-1},
+  isbn      = {978-3-642-32936-4},
+  timestamp = {Tue, 14 May 2019 10:00:53 +0200},
+  biburl    = {https://dblp.org/rec/bib/conf/ppsn/2012-1},
   bibsource = {dblp computer science bibliography, https://dblp.org}
 }
