--- a/paper_latex/samplepaper.tex
+++ b/paper_latex/samplepaper.tex
@@ -54,7 +54,7 @@ With this paper we aim to:
 
 Genetic Algorithms are inspired by Nature and its biological mechanisms, take the following analogy as an example. Imagine that you are in the horse racing business, and you own a set of horses (population), some horses are better at different skills (speed, resistance, strength, etc.). When selecting horses to produce offspring (crossover and mutation), you must select them based on their fitness, which is calculated using a fitness function. In this case, it could be the average lap time from a set of tracks, better fitness values would mean lower average lap times.
 
-The semantic syntax our work will be based on will be presented as a tree structure, each node containing either a mathematical operator, a literal or a variable which can be swapped by a value from a given data set.
+The semantic syntax our work will be based on will be presented as a tree structure, each node containing either a mathematical operator, a literal or a variable which can be swapped by a value from a given data set. The root must always be an operator, and the leaf nodes a literal or a variables.
 When processing a tree through a data set row, each variable will be swapped by the corresponding value in the data set according to the variable column index. In Figure \ref{syntree} we can see the tree representation of the mathematical formula $x0 * (x1+4)$ which is then processed according to a data set row containing the values $(0.5\quad 25.3\quad 6.2\quad 12)$. The values within the data set that are not referenced by any variable in the tree are ignored.
 \begin{figure}
 
@@ -149,15 +149,13 @@ Given this alternating crossover algorithm, we can achieve a less linear evoluti
 
 
 \section{Implementation Details}
-Before any values could be first calculated, we needed some form of input to compare values with. This lead to the implementation of a data set parser. The data set is a text file in which all the variables and target values are defined. Each line has an equal amount of values \textit{Y} written, the last of which corresponds to the target value. Both variable values and target values are then extracted and stored in separate arrays which will be used to calculate the fitness for the first generation of trees.
-
-To store and calculate the values, a set number of random syntax trees have to be initially generated. Each node of the tree as previously mentioned can be a literal value, a variable or a mathematical operator. After generating the trees, each one of them must be run through the data set to evaluate its fitness by calculating the mathematical operations defined and comparing it with the target values. The computation is handled as a Reverse Polish Notation calculator (RPN) according to the following procedures:
+To compute the generated trees, the mathematical operations by them defined are handled as a Reverse Polish Notation calculator (RPN) according to the following procedures:
 \begin{itemize}
 	\item A separate LIFO stack to store literal values and variables is created
-	\item The tree is traversed in postorder so that the root operation or value is read last
+	\item The tree is traversed in the following order: right child - left child and root
 	\item If either a literal or a variable are present, they are pushed into the stack
 	\item If a mathematical operation is read, 2 values are popped out of the stack for computing, and the resulting value is pushed back into the stack
-	\item At the end of the processing, the final value is popped from the stack and stored in a result matrix of size $N_{trees}*dataset_{rows}$ with each row representing the calculated values for a given data set row by a syntax tree and each column the resulting values to compare with the target values.
+	\item At the end of the processing, the final value is popped from the stack and stored in a result matrix of size $N_{trees}*dataset_{rows}$ with each row representing the calculated values for all data set rows by a syntax tree and each $x_{i,j}$ entry (\textit{i} being the row and \textit{j} being the column of the value matrix) is compared to the respective targe value in row \textit{j} od the data set.
 \end{itemize}
 
 \subsection{GPU Parallelization}
@@ -176,9 +174,9 @@ The default value for the number of threads per block is 512 (multiple of 32), t
 We then perform a reduction using the kernel call of the method \texttt{gpu\_phase\_one}, each block will find the best fitness and its corresponding index in the fitness array previously calculated within the following indexes of said array: $$[\textit{blockDim.x} * \textit{blockIdx.x} + 0; \textit{blockDim.x} * \textit{blockIdx.x} + 512[$$
 After this, we need to synchronize all blocks in order to find the best fitness and its index in the fitness array by comparing the results from each block. We do this by using another kernel call \texttt{gpu\_phase\_two} with the same blocks/threads per block as the previous one. This kernel call will look up the values written to the auxiliary arrays \texttt{dev\_fitness\_aux} and \texttt{dev\_fitness\_index\_aux} by the \texttt{gpu\_phase\_one} kernel call. The values are written and read from said arrays based on whether the current generation is odd or even.
 
-For odd generation cycles, every odd threadIdx.x from all blocks will find the best fitness value by only looking up odd indexes of the auxiliary arrays, while even threadIdx.x will do the same but for even indexes of said auxiliary arrays.
+For odd generation cycles, every odd \textit{threadIdx.x} from all blocks will find the best fitness value by only looking up odd indexes of the auxiliary arrays, while even \textit{threadIdx.x} will do the same but for even indexes of said auxiliary arrays.
 
-For even generation cycles, blocks with blockIdx.x $<$ gridDim.x/2 will find the best fitness value by only looking up indexes $<$ gridDim.x/2 on the auxiliary arrays, while blocks with blockIdx.x $\geq$ gridDim.x/2 will do the same but for indexes $\geq$ gridDim.x/2.
+For even generation cycles, blocks with \textit{blockIdx.x} $<$ \textit{gridDim.x/2} will find the best fitness value by only looking up indexes $<$ \textit{gridDim.x/2} on the auxiliary arrays, while blocks with \textit{blockIdx.x} $\geq$ \textit{gridDim.x/2} will do the same but for indexes $\geq$ \textit{gridDim.x/2}.
 
 After finding the best fitness \textit{x} and the corresponding index \textit{i}, every thread of every block will write to the $A_{G,N}$ matrix the index of the tree with the best fitness, and then will write to the \texttt{new\_fitness} array the fitness of crossing over the tree at indexes threadIdx.x and \textit{i}, using the fitness value of the tree threadIdx.x from the previous fitness array plus the sigmoid of the best fitness value just discovered, \textit{x}.
 
@@ -195,6 +193,8 @@ Then a new generation will start, where the \texttt{new\_fitness} will now be th
 \section{Evaluation}
 
 \subsection{Experimental Setup}
+
+A machine with the following specifications was used to run all the tests.
 
 \begin{center}
  \begin{tabular}{|>{\centering\arraybackslash}p{4cm}|>{\centering\arraybackslash}p{2cm}|>{\centering\arraybackslash}p{2cm}|>{\centering\arraybackslash}p{2cm}|} 
@@ -216,22 +216,27 @@ Then a new generation will start, where the \texttt{new\_fitness} will now be th
 \end{tabular}
 \end{center}
 
-In this section you should describe the machine(s) in which you are going to evaluate your system. Select the information that is relevant.
-
-
 \subsection{Results}
 
-In this section you should present the results. Do not forget to explain where the data came from. 
-
-You should include (ideally vectorial) plots, with a descriptive caption. Make sure all the plots (Like Figure~\ref{fig1} are well identified and axis and metrics are defined.
+The following time at Figure~\ref{graph} values were outputted by running the program with a data set of 4 lines. The size of the trees was varied according to the X axis and the amount of generations was a fixed set of 5000.
+\begin{figure}[!htb]
+\begin{center}
+\includegraphics[scale=0.6]{graph}
+\end{center}
+\caption{CPU and GPU execution time comparison}
+\label{graph}
+\end{figure}
 
 \subsection{Discussion}
 
-Here you should discuss the results on a high level. For instance, based on our results, the parallelization of the merge-sort is relevant as no other parallel work occurs at the same time, and the complexity $O(Nlog(N))$ can have a large impact when the number of individuals is high.
+For a low amount of syntax trees, we can see only a small variance between CPU sequential and GPU parallel execution. In the case of 128 trees, the CPU finishes with a lower time compared to the GPU. This is largely due to the overhead when copying memory to and from host and device, as data must travel through the PCIe channel which is much slower compared to either’s memory access.
+On larger amounts of trees, the GPU outperforms the CPU by a significant margin as expected, by parallelizing all fitness calculations the overhead due to memory copying is overshadowed by the performance gain.
 
 \section{Related Work}
 
 Alberto Moraglio, Krzysztof Krawiec, and Colin G. Johnson introduced a new way of genetic programming, Geometric Semantic Genetic Programming (GSGP) which consists in changing the semantics of the functions directly. Their work in regards to fitness evaluation, tree mutation and crossover is far more complex than ours given that we only accounted for mutation by concatenation with sums of trees. However the implementation of the genetic algorithm was done on CPU which makes performance considerably slower if it were implemented on GPU.
+
+Simon Harding and Wolfgang Banzhaf were pioneers in implementing genetic programs on the GPU. Since the tools available at the time were limited, the implementation was done on a toolkit that relied on DirectX (a virtual machine interface that grants access to the GPU), their implementation was limited to Windows machines only. Given that CUDA is an API extended by both C and C++, the implementation presented in this paper is more portable and can be maintained on Windows, Linux or other supported operating systems.
 
 
 \section{Conclusions}
@@ -248,7 +253,8 @@ Both authors wrote this paper, with João David focusing on the approach and int
 
 Each author spent around 40 hours on this project.
 
-\bibliographystyle{splncs04}
+\nocite{*}
+\bibliographystyle{plain}
 \bibliography{bibliography}
 
 \end{document}
