--- a/paper_latex/samplepaper.tex
+++ b/paper_latex/samplepaper.tex
@@ -218,7 +218,7 @@ A machine with the following specifications was used to run all the tests.
 
 \subsection{Results}
 
-The following time at Figure~\ref{graph} values were outputted by running the program with a data set of 4 lines. The size of the trees was varied according to the X axis and the amount of generations was a fixed set of 5000.
+The following time at Figure~\ref{graph} values were outputted by running the program with a data set of 234 lines and 627 rows. The size of the trees was varied according to the X axis and the amount of generations was a fixed set of 5000.
 \begin{figure}[!htb]
 \begin{center}
 \includegraphics[scale=0.6]{graph}
@@ -252,6 +252,8 @@ João David wrote the sequential version of the algorithm and two GPU methods, w
 Both authors wrote this paper, with João David focusing on the approach and introduction while Ye Yang focused on implementation details, related work and conclusion.
 
 Each author spent around 40 hours on this project.
+
+\pagebreak
 
 \nocite{*}
 \bibliographystyle{plain}
